--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   "scripts": {
     "prepare": "husky",
     "new": "taro new",
-    "build:weapp": "taro build --type weapp",
-    "build:swan": "taro build --type swan",
-    "build:alipay": "taro build --type alipay",
-    "build:tt": "taro build --type tt",
+    "build:weapp": "taro build --type weapp --env production",
+    "build:swan": "taro build --type swan --env production",
+    "build:alipay": "taro build --type alipay --env production",
+    "build:tt": "taro build --type tt --env production",
     "build:h5": "taro build --type h5",
     "build:testing": "taro build --type h5 --env testing",
     "build:preview": "taro build --type h5 --env preview",
     "build:production": "taro build --type h5 --env production",
-    "build:rn": "taro build --type rn",
-    "build:qq": "taro build --type qq",
-    "build:jd": "taro build --type jd",
-    "build:harmony-hybrid": "taro build --type harmony-hybrid",
+    "build:rn": "taro build --type rn --env production",
+    "build:qq": "taro build --type qq --env production",
+    "build:jd": "taro build --type jd --env production",
+    "build:harmony-hybrid": "taro build --type harmony-hybrid --env production",
     "dev:weapp": "npm run build:weapp -- --watch",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
