fix: 修复打包问题

--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
   "scripts": {
     "prepare": "husky",
     "new": "taro new",
-    "build:weapp": "taro build --type weapp --env production",
-    "build:swan": "taro build --type swan --env production",
-    "build:alipay": "taro build --type alipay --env production",
-    "build:tt": "taro build --type tt --env production",
+    "build:weapp": "taro build --type weapp --mode production",
+    "build:swan": "taro build --type swan --mode production",
+    "build:alipay": "taro build --type alipay --mode production",
+    "build:tt": "taro build --type tt --mode production",
     "build:h5": "taro build --type h5",
-    "build:testing": "taro build --type h5 --env testing",
-    "build:preview": "taro build --type h5 --env preview",
-    "build:production": "taro build --type h5 --env production",
-    "build:rn": "taro build --type rn --env production",
-    "build:qq": "taro build --type qq --env production",
-    "build:jd": "taro build --type jd --env production",
-    "build:harmony-hybrid": "taro build --type harmony-hybrid --env production",
+    "build:testing": "taro build --type h5 --mode testing",
+    "build:preview": "taro build --type h5 --mode preview",
+    "build:production": "taro build --type h5 --mode production",
+    "build:rn": "taro build --type rn --mode production",
+    "build:qq": "taro build --type qq --mode production",
+    "build:jd": "taro build --type jd --mode production",
+    "build:harmony-hybrid": "taro build --type harmony-hybrid --mode production",
     "dev:weapp": "npm run build:weapp -- --watch",
     "dev:swan": "npm run build:swan -- --watch",
     "dev:alipay": "npm run build:alipay -- --watch",
